# strace

./: .codecov.yml  .cvsignore  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  .packit.yml  .travis.yml  COPYING  COPYRIGHT  CREDITS  CREDITS.in  ChangeLog  GPG-KEY  HACKING-scripts  INSTALL  INSTALL-git.md  LGPL-2.1-or-later  Makefile.am  Makefile.in  NEWS  README  README-CVS  README-configure  README-format  README-freebsd  README-github_gitlab-autogenerated-archives.txt  README-hacking  README-linux  README-linux-ptrace  README-mpers  README-svr4  README.md  TODO  access.c  acconfig.h  acinclude.m4  aclocal.m4  affinity.c  aio.c  (+415 more)
bundled/: Makefile.am
bundled/linux/: COPYING
linux/: Makefile.am  Makefile.in  alt_errnoent.h  alt_signalent.h  arch_defs.h  arch_defs_.h  arch_kvm.c  arch_rt_sigframe.c  arch_sigreturn.c  asm_stat.h  check_scno.c  dummy.h  dummy_check.sh  errnoent.h  fanotify.h  getregs_old.h  inet_diag.h  inotify.h  ioctlent.h  ioctlent.h.in  ioctlent.sh  ioctlsort.c  kexec.h  mtd-abi.h  netlink_diag.h  nr_prefix.c  packet_diag.h  personality.h  ptp_clock.h  ptrace_pokeuser.c  rt_sigframe.h  shuffle_scno.c  signal.h.in  signalent.h  smc_diag.h  sock_diag.h  subcall.h  subcall32.h  subcall64.h  syscall.h  (+6 more)
linux/32/: ioctls_inc.h  ioctls_inc_align16.h  ioctls_inc_align32.h  ioctls_inc_align64.h  syscallent-time32.h  syscallent.h
linux/64/: ioctls_inc.h  syscallent.h
linux/aarch64/: arch_defs_.h  arch_get_personality.c  arch_regs.c  arch_regs.h  arch_rt_sigframe.c  errnoent1.h  get_error.c  get_scno.c  get_syscall_args.c  ioctls_arch0.h  ioctls_arch1.h  print_pc.c  raw_syscall.h  set_error.c  set_scno.c  shuffle_scno.c  syscallent.h  syscallent1.h
linux/alpha/: alt_signalent.h  arch_defs_.h  arch_getrval2.c  arch_regs.c  arch_regs.h  arch_rt_sigframe.c  arch_sigreturn.c  errnoent.h  get_error.c  get_scno.c  get_syscall_args.c  get_syscall_result.c  ioctlent.h  ioctls_arch0.h  print_pc.c  raw_syscall.h  set_error.c  set_scno.c  signalent.h  syscallent.h  userent.h
linux/arc/: arch_regs.c  arch_regs.h  arch_rt_sigframe.c  get_error.c  get_scno.c  get_syscall_args.c  ioctls_arch0.h  print_pc.c  raw_syscall.h  set_error.c  set_scno.c  syscallent.h
linux/arm/: arch_defs_.h  arch_regs.c  arch_regs.h  arch_rt_sigframe.c  arch_sigreturn.c  errnoent1.h  get_error.c  get_scno.c  get_syscall_args.c  ioctlent1.h  ioctls_arch0.h  nr_prefix.c  print_pc.c  raw_syscall.h  set_error.c  set_scno.c  shuffle_scno.c  signalent1.h  syscallent.h  syscallent1.h  userent.h
linux/avr32/: arch_regs.c  arch_regs.h  arch_rt_sigframe.c  get_error.c  get_scno.c  get_syscall_args.c  ioctls_arch0.h  print_pc.c  raw_syscall.h  set_error.c  set_scno.c  syscallent.h  userent.h
linux/bfin/: arch_defs_.h  arch_regs.c  arch_rt_sigframe.c  get_error.c  get_scno.c  get_syscall_args.c  get_syscall_result.c  ioctlent.h  ioctls_arch0.h  raw_syscall.h  rt_sigframe.h  set_error.c  set_scno.c  syscallent.h  userent.h
linux/crisv10/: arch_regs.c  arch_rt_sigframe.c  arch_sigreturn.c  get_error.c  get_scno.c  get_syscall_args.c  get_syscall_result.c  print_pc.c  set_error.c  set_scno.c  syscallent.h  userent.h
linux/crisv32/: arch_regs.c  arch_rt_sigframe.c  arch_sigreturn.c  get_error.c  get_scno.c  get_syscall_args.c  get_syscall_result.c  print_pc.c  rt_sigframe.h  set_error.c  set_scno.c  syscallent.h  userent.h
linux/csky/: get_scno.c  get_syscall_args.c  raw_syscall.h  set_error.c  set_scno.c
linux/drm/: drm.h  drm_mode.h
linux/hppa/: .cvsignore  alt_errnoent.h  arch_defs_.h  arch_regs.c  arch_regs.h  arch_rt_sigframe.c  errnoent.h  get_error.c  get_scno.c  get_syscall_args.c  get_syscall_result.c  ioctlent.h  ioctls_arch0.h  print_pc.c  raw_syscall.h  rt_sigframe.h  set_error.c  set_scno.c  signalent.h  syscallent.h  syscallent.sh
linux/i386/: arch_regs.c  arch_regs.h  arch_rt_sigframe.c  arch_sigreturn.c  get_error.c  get_scno.c  get_syscall_args.c  ioctlent.h.in  ioctls_arch0.h  print_pc.c  raw_syscall.h  rt_sigframe.h  set_error.c  set_scno.c  syscallent.h  userent.h  userent0.h
linux/ia64/: Makefile.in  arch_defs_.h  arch_getrval2.c  arch_regs.c  arch_regs.h  arch_rt_sigframe.c  arch_sigreturn.c  get_error.c  get_scno.c  get_syscall_args.c  ioctlent.h  ioctls_arch0.h  print_pc.c  raw_syscall.h  rt_sigframe.h  set_error.c  set_scno.c  shuffle_scno.c  syscallent.h  userent.h
linux/linux/: signal.h
linux/m68k/: arch_defs_.h  arch_regs.c  arch_regs.h  arch_rt_sigframe.c  arch_sigreturn.c  get_error.c  get_scno.c  get_syscall_args.c  get_syscall_result.c  ioctls_arch0.h  print_pc.c  raw_syscall.h  rt_sigframe.h  set_error.c  set_scno.c  syscallent.h  userent.h
linux/metag/: arch_regs.c  arch_regs.h  arch_rt_sigframe.c  get_error.c  get_scno.c  get_syscall_args.c  ioctls_arch0.h  print_pc.c  raw_syscall.h  set_error.c  set_scno.c  syscallent.h
linux/microblaze/: arch_defs_.h  arch_regs.c  arch_rt_sigframe.c  arch_sigreturn.c  get_error.c  get_scno.c  get_syscall_args.c  print_pc.c  (+6 more)
src/: .gitignore  Makefile.am  access.c  affinity.c  aio.c  alarm.c  alpha.c  arch_defs.h  asinfo  asinfo.c  asinfo_syscalls.h  basic_filters.c  bind.c  bjm.c  block.c  bpf.c  bpf_attr.h  bpf_filter.c  bpf_filter.h  bpf_fprog.h  bpf_seccomp_filter.c  bpf_sock_filter.c  btrfs.c  cacheflush.c  cachestat.c  cachestat.h  capability.c  caps0.h  caps1.h  chdir.c  chmod.c  clone.c  close_range.c  color.c  color.h  copy_file_range.c  count.c  count.h  counter_ioctl.c  defs.h  (+380 more)
tests/: .gitignore  COPYING  GPL-2.0-or-later  Makefile.am  PTRACE_SEIZE.sh  _newselect-P.c  _newselect.c  _newselect.test  accept.c  accept.test  accept4.c  accept4.test  accept@json.c  accept_compat.h  access--secontext.c  access--secontext_full.c  access.c  access.test  acct.c  acct.test  add_key.c  add_key.test  adjtimex.c  adjtimex.test  aio.c  aio.test  aio_pgetevents.c  alarm.c  alarm.test  answer.c  arch_prctl-Xabbrev.c  arch_prctl-Xraw.c  arch_prctl-Xverbose.c  arch_prctl-success-Xabbrev.c  arch_prctl-success-Xraw.c  arch_prctl-success-Xverbose.c  arch_prctl-success.c  arch_prctl.c  arch_prctl.sh  asinfo-errors.test  (+2154 more)
(+2661 files in other folders)
